dynamix/force-app/main/default/objects/Contact/fields/Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_No__c</fullName>
    <label>Aadhar No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>