dynamix/force-app/main/default/objects/Contact/fields/Aadhar_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Uploaded</label>
    <type>Checkbox</type>
</CustomField>