dynamix/force-app/main/default/objects/Contact/fields/Designation_or_Position__c.field-meta.xml
<CustomField>
    <fullName>Designation_or_Position__c</fullName>
    <label>Designation or Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>