dynamix/force-app/main/default/objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Marwari</fullName>
            </value>
            <value>
                <fullName>South Indian</fullName>
            </value>
            <value>
                <fullName>North Indian</fullName>
            </value>
            <value>
                <fullName>Sikh</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Parsi</fullName>
            </value>
            <value>
                <fullName>Sindhi</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Malayali</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>North Indian Hindu</fullName>
            </value>
            <value>
                <fullName>South Indian Hindu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>