dynamix/force-app/main/default/objects/Contact/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locality</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>