dynamix/force-app/main/default/objects/Contact/fields/PAN_Card_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN Card Uploaded</label>
    <type>Checkbox</type>
</CustomField>