dynamix/force-app/main/default/objects/Contact/fields/Resident_of_India__c.field-meta.xml
<CustomField>
    <fullName>Resident_of_India__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident of India</label>
    <type>Checkbox</type>
</CustomField>