dynamix/force-app/main/default/objects/Contact/validationRules/Aadhar_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( REGEX(  Aadhar_No__c   , &quot;[0-9]{12}&quot;) ) ,NOT(ISBLANK(  Aadhar_No__c )) )</errorConditionFormula>
    <errorDisplayField>Aadhar_No__c</errorDisplayField>
    <errorMessage>Please enter valid aadhar no</errorMessage>
</ValidationRule>